# reference_system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/reference_system/: arequipa.hpp  barcelona.hpp  cordoba.hpp  delhi.hpp  freeport.hpp  geneva.hpp  georgetown.hpp  hamburg.hpp  hebron.hpp  kingston.hpp  lyon.hpp  mandalay.hpp  medellin.hpp  monaco.hpp  osaka.hpp  ponce.hpp  portsmouth.hpp  publisher_node.hpp  publisher_nodes.hpp  rotterdam.hpp  taipei.hpp  tripoli.hpp
launch/: r2s_refernce_system.launch.py  reference_system.launch.py  reference_system_nodes.launch.py  reference_system_small.launch.py
src/: arequipa.cpp  barcelona.cpp  cordoba.cpp  delhi.cpp  freeport.cpp  geneva.cpp  georgetown.cpp  hamburg.cpp  hebron.cpp  kingston.cpp  lyon.cpp  mandalay.cpp  medellin.cpp  monaco.cpp  osaka.cpp  ponce.cpp  portsmouth.cpp  publisher_nodes.cpp  rotterdam.cpp  taipei.cpp  tripoli.cpp  utils.cpp  utils.hpp
